# optoy

./: .gitignore  premake.ps1
apps/RayDbg/: RayDbg.sln
apps/RayDbg/RayDbg/: App.cpp  App.h  App.idl  App.xaml  App.xaml.cpp  App.xaml.h  DeviceResources.cpp  DeviceResources.h  DirectXHelper.h  GCamera.h  GraphicsEntities.h  GraphicsRenderThread.h  IOUtils.h  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  MainPageViewModel.cpp  MainPageViewModel.idl  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MasterViewer.cpp  MasterViewer.h  MasterViewer.idl  MasterViewer.xaml  Package.appxmanifest  RayDbg.vcxproj  RayDbg.vcxproj.filters  StringUtils.cpp  StringUtils.h  StringUtils.idl  ViewEntities.idl  VisualLinePool.h  app.manifest  pch.h  readme.txt
apps/RayDbg/RayDbg/Shaders/: main_ps.hlsl.h  main_vs.hlsl.h  vlinepool_vs.hlsl.h
apps/RayDbg/raydbg/raydbg/: App.xaml.cpp  DeviceResources.cpp  DeviceResources.h  GraphicsAlgo.h  GraphicsRenderThread.h  IOUtils.h  MainPage.idl  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  MainPageViewModel.cpp  MainPageViewModel.h  MainPageViewModel.idl  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MasterViewer.idl  MasterViewer.xaml  MasterViewer.xaml.cpp  MasterViewer.xaml.h  OneWindow.h  StringUtils.h  StringUtils.idl  VisualLinePool.h  pch.h  raydbg.vcxproj  raydbg.vcxproj.filters  readme.txt
apps/RayDbg/raydbg/raydbg (Package)/: Package.appxmanifest  raydbg (Package).wapproj
apps/RayDbg/raydbg/raydbg/Shaders/: vlinepool_ps.hlsl.h
src/: CMakeLists.txt
src/console/: CMakeLists.txt
src/liboptoy/: CMakeLists.txt
src/liboptoy/includes/: mathdef.hpp  mathutils.hpp  optoy.hpp  predef.hpp
src/liboptoy/includes/core/: geo.hpp  interaction.hpp  irresolver.hpp  ray.hpp  scenenode.hpp  simplecam.hpp  simplerenderer.hpp  sphere.hpp  texture2d.hpp  threadpool.hpp  transformation.hpp
src/liboptoy/includes/interfaces/: icamera.hpp  iimage.hpp  iscene.hpp  ishape.hpp
src/liboptoy/includes/io/: pngwriter.hpp
src/liboptoy/includes/primitives/: geo.hpp  intersec.hpp  ray.hpp  sphere.hpp
src/liboptoy/includes/stl-preview/: proxy
src/tests/: CMakeLists.txt  intersec-tests.cpp  io-tests.cpp  irresolver-tests.cpp  ray-tests.cpp  shape-tests.cpp  threadpool-tests.cpp
